deploy/argocd/manifests/applications/todo-bot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-bot
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: placeholder
  template:
    metadata:
      labels:
        app: placeholder
    spec:
      containers:
        - name: todo-bot
          image: todo-bot
          livenessProbe:
            httpGet:
              path: /health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10 
          ports:
            - containerPort: 8082
          resources:
            limits:
              memory: "512Mi"
