deploy/argocd/manifests/applications/todo-bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-bot
spec:
  type: ClusterIP
  selector:
    app: todo-bot
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
